--- a/FirstTask1/app/build.gradle
+++ b/FirstTask1/app/build.gradle
@@ -48,4 +48,9 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.5.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    def nav_version = "2.5.2"
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
